tests/errors/sendNotSend.milo
// @error: type does not implement Send

from "std/runtime" import {
    Promise
}

struct Dangerous {
    _ptr: *u8,
}

fn main(): i32 {
    unsafe {
        let d = Dangerous {
            _ptr: 0 as *u8
        }
        let _t = Promise<i64>.blocking(move(): i64 => {
            let _x = d._ptr
            return 0
        }
        )
    }
    return 0
}
